--- a/estilos.css
+++ b/estilos.css
@@ -48,7 +48,7 @@ a {
 
 /* Efecto hover */
 a:hover {
-    background-color: #a76f4d;
+    background-color: #772600;
 }
 
 /* Contenedor general (opcional) */
