--- a/estilos.css
+++ b/estilos.css
@@ -39,7 +39,7 @@ a {
     display: inline-block;
     text-decoration: none;
     background-color: #e28000;
-    color: #fff;
+    color: #000000;
     padding: 25px 25px;
     margin: 25px;
     border-radius: 20px;
