--- a/estilos.css
+++ b/estilos.css
@@ -36,19 +36,15 @@ p {
 
 /* Enlaces como botones */
 a {
-    font-size: 1.5rem;
+    font-size: 22px;
     display: inline-block;
     text-decoration: none;
     background-color: #e28000;
     color: #000000;
-    padding: 1em 2em;
-    margin: 1em auto;     /* centra horizontalmente */
+    padding: 40px 50px;
+    margin: 25px;
     border-radius: 20px;
     transition: background-color 0.3s;
-    max-width: 90%;
-    text-align: center;
-}
-
 
 /* Efecto hover */
 a:hover {
